--- a/server.properties
+++ b/server.properties
@@ -28,12 +28,12 @@ difficulty=1
 enable-command-block=true
 player-idle-timeout=0
 gamemode=0
-max-players=20
+max-players=999
 spawn-monsters=true
 generate-structures=true
 view-distance=10
 spawn-protection=16
-motd=A Minecraft Server powered by Docker
+motd=Minecraft Server Anssible
 generator-settings=
 rcon.password=
 max-world-size=29999984
